refactor(form-response): move export endpoint
